Fix overflow Functionality to create sequence

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,7 @@
 .hidden {
     visibility: hidden;
 }
+
+.overflow-managed {
+    overflow: auto;
+}
